# ENOR_Vatsim_Runway_Selector

./: .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  PLUGIN_DEVELOPMENT.md  README.md  default_runways.txt  failed_metars.json  ignore_airports.txt  openapi.json  openapi.yaml  release.toml
.github/workflows/: ci.yml
area_enor/: Cargo.toml
area_enor/package/: area.toml  manifest.toml
area_enor/package/profiles/: rads.toml  twr.toml
area_enor/src/: main.rs  selector.rs
area_enor/tests/: e2e_spawn_select.rs
enor_plugin/: Cargo.toml
enor_plugin/src/: engm.rs  enzv.rs  handler.rs  main.rs
es_runway_selector/: Cargo.toml  app_launchers.toml  config.toml
es_runway_selector/src/: airport.rs  airports.rs  api_server.rs  area_cli.rs  area_config.rs  area_runtime.rs  atis.rs  atis_parser.rs  config.rs  error.rs  helpers_server.rs  main.rs  metar.rs  mise_manager.rs  plugin_client.rs  plugin_manager.rs  plugin_runner.rs  plugin_updater.rs  protocol_convert.rs  report_builder.rs  runway.rs  sector_file.rs  wizard.rs
es_runway_selector/templates/: runway_report.html
es_runway_selector_area_enor/: Cargo.toml  build.rs
es_runway_selector_area_enor/src/: engm.rs  enzv.rs  main.rs
examples/: node_plugin_example.js  python_plugin_example.py
examples/area_example_deno/package/: manifest.toml
examples/area_example_deno/package/plugin/: server.ts
examples/area_example_python/package/: manifest.toml  requirements.txt
examples/area_example_python/package/plugin/: server.py
examples/area_example_python/package/profiles/: twr.toml
examples/area_example_python/scripts/: generate-stubs.sh
examples/area_example_rust/: Cargo.toml  README.md
examples/area_example_rust/package/: area.toml  manifest.toml
examples/area_example_rust/src/: main.rs
examples/python/: .mise.toml  plugin.py  pyproject.toml
examples/python-plugin/: .gitignore  .mise.toml  main.py  requirements-dev.txt  requirements.txt
examples/typescript/: .mise.toml  deno.json  plugin.ts
examples/typescript-plugin/: .mise.toml  package.json  tsconfig.json
examples/typescript-plugin/src/: index.ts
find_bad_metar_job/: Cargo.toml
find_bad_metar_job/src/: main.rs
metar_decoder/: Cargo.toml  README.md  all_metars  na_metars.txt  test.metars  test.metars2
metar_decoder/src/: lib.rs  metar.rs  nato_mil_code.rs  obscuration.rs  optional_data.rs  pressure.rs  sea_surface_indicator.rs  temperature.rs  temprature.rs  trend.rs  wind.rs
metar_decoder/src/units/: altitudes.rs  timestamp.rs  track.rs  velocity.rs
runway_plugin_api/: Cargo.toml  README.md
runway_plugin_api/src/: helpers.rs  lib.rs
runway_selector_area_config/: Cargo.toml
runway_selector_area_config/src/: lib.rs
runway_selector_areas/: Cargo.toml
runway_selector_areas/src/: lib.rs
runway_selector_core/: Cargo.toml  runway.test
runway_selector_core/src/: airport.rs  airports.rs  area_config.rs  atis.rs  error.rs  lib.rs  metar.rs  output.rs  plugin_convert.rs  proto_convert.rs  runway.rs  sector_file.rs
runway_selector_core/templates/: runway_report.html
runway_selector_plugin_host/: Cargo.toml
runway_selector_plugin_host/src/: lib.rs
runway_selector_protocol/: Cargo.toml  README.md  build.rs
runway_selector_protocol/proto/: runway_selector.proto
runway_selector_protocol/src/: lib.rs  openapi.rs  types.rs  wind_calc.rs
runways/: Cargo.toml
runways/src/: airport.rs  airports.rs  config.rs  metar.rs  util.rs
src/: airport.rs  airports.rs  atis.rs  config.rs  error.rs  main.rs  metar.rs  output.rs  runway.rs  util.rs
