[workspace]
resolver = "3"
members = ["es_runway_selector", "metar_decoder", "find_bad_metar_job"]

[workspace.package]
authors = ["meltinglava"]
version = "0.0.1-alpha.47"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Package for automaticly selecting runways for Euroscope in Polaris area"
repository = "https://github.com/meltinglava/ENOR_Vatsim_Runway_Selector"

[workspace.dependencies]
futures = { version = "0.3.32", default-features = false }
indexmap = { version = "2.13.0", features = ["serde"] }
itertools = "0.14.0"
jiff = { version = "0.2.20", features = ["serde"] }
nom = "8.0.0"
reqwest = { version = "0.13", features = ["charset", "http2", "json", "rustls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["indexmap", "preserve_order"] }
serde_with = { version = "3.16.1", features = ["indexmap"] }
thiserror = "2.0.18"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "tracing", "process"] }
tracing = { version = "0.1.44", features = ["valuable"] }
tracing-subscriber = { version = "0.3.22", features = ["serde", "json", "valuable", "env-filter", "std"] }
tracing-test = "0.2.6"
tracing-unwrap = { version = "1.0.1", features = ["log-location"] }
