[package]
name = "area_enor"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ENOR (Polaris/Norway FIR) area plugin for es_runway_selector"

[[bin]]
name = "area_enor"
path = "src/main.rs"

[dependencies]
runway_selector_area_config = { path = "../runway_selector_area_config" }
runway_selector_protocol = { path = "../runway_selector_protocol" }

clap = { version = "4.6.1", features = ["derive"] }
jiff = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tonic = { workspace = true }
tonic-health = { workspace = true }
tonic-prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
indexmap = { workspace = true }
