[package]
name = "area_enor"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ENOR (Polaris/Norway FIR) area plugin for es_runway_selector"

[[bin]]
name = "area_enor"
path = "src/main.rs"

[dependencies]
runway_plugin_api = { path = "../runway_plugin_api" }
runway_selector_area_config = { path = "../runway_selector_area_config" }

axum = { workspace = true }
jiff = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "net"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
indexmap = { workspace = true }
runway_selector_plugin_host = { path = "../runway_selector_plugin_host" }
semver = "1.0.27"
tempfile = "3.27.0"
toml = { workspace = true }
