[package]
name = "enor_plugin"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.8.4", default-features = false, features = ["json", "tokio", "http1"] }
clap = { version = "4.6.1", features = ["derive"] }
jiff = { workspace = true }
runway_plugin_api = { path = "../runway_plugin_api" }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
