[package]
name = "es_runway_selector"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
askama = { version = "0.16.0", default-features = false, features = ["derive", "std"] }
axum = { workspace = true }
clap = { version = "4.6.1", features = ["derive"] }
config = { version = "0.15.22", default-features = false, features = ["toml", "indexmap", "preserve_order"] }
directories = "6.0.0"
encoding = "0.2.33"
futures = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
jiff = { workspace = true }
metar_decoder = { path = "../metar_decoder" }
runway_plugin_api = { path = "../runway_plugin_api" }
nom = { workspace = true }
open = "5.3.5"
regex = "1.12.3"
reqwest = { workspace = true }
self_update = { version = "0.44.0", features = ["reqwest", "compression-zip-deflate", "archive-tar"], default-features = false }
rustls = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
sysinfo = { version = "0.39.1", default-features = false, features = ["system", "serde"]}
tempfile = "3.27.0"
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { version = "1.1.2", features = ["preserve_order"] }
tracing = { workspace = true }
tracing-appender = "0.2.5"
tracing-subscriber = { workspace = true }
tracing-unwrap = { workspace = true }
vatsim_utils = { version = "0.6.0", default-features = false, features = ["rustls-tls"] }
walkdir = "2.5.0"
whoami = { version = "2.1.2", default-features = false, features = ["std"] }

[target.'cfg(not(target_env = "musl"))'.dependencies]
rfd = "0.17.2"

[target.'cfg(windows)'.dependencies]
zip = "2.2"

[target.'cfg(not(windows))'.dependencies]
flate2 = "1.1"
tar = "0.4"

[dev-dependencies]
tracing-test = { workspace = true }
