[package]
name = "es_runway_selector"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
config = { version = "0.15.22", default-features = false, features = ["toml", "indexmap", "preserve_order"] }
directories = "6.0.0"
indexmap = { workspace = true }
itertools = { workspace = true }
jiff = { workspace = true }
regex = "1.12.3"
runway_selector_areas = { path = "../runway_selector_areas" }
runway_selector_core = { path = "../runway_selector_core" }
self_update = { version = "0.44.0", features = ["reqwest", "compression-zip-deflate", "archive-tar"], default-features = false }
rustls = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
sysinfo = { version = "0.39.1", default-features = false, features = ["system", "serde"]}
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { version = "1.1.2", features = ["preserve_order"] }
tracing = { workspace = true }
tracing-appender = "0.2.5"
tracing-subscriber = { workspace = true }
tracing-unwrap = { workspace = true }
walkdir = "2.5.0"
whoami = { version = "2.1.2", default-features = false, features = ["std"] }

[target.'cfg(not(target_env = "musl"))'.dependencies]
rfd = "0.17.2"

[dev-dependencies]
tempfile = "3.27.0"
tracing-test = { workspace = true }
