[package]
name = "es_runway_selector_area_enor"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ENOR area plugin for es_runway_selector (reference implementation)"

[build-dependencies]
runway_selector_protocol = { path = "../runway_selector_protocol" }

[dependencies]
axum = { workspace = true }
indexmap = { workspace = true }
jiff = { workspace = true }
metar_decoder = { path = "../metar_decoder" }
reqwest = { workspace = true }
runway_selector_protocol = { path = "../runway_selector_protocol" }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
