[package]
name = "metar_decoder"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pacakge that parses metars into set structs"

[dependencies]
itertools = "0.14.0"
jiff = { version = "0.2.15", features = ["serde", "logging"] }
nom = "8.0.0"
thiserror = "2.0.16"
