[package]
name = "metar_decoder"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pacakge that parses metars into set structs"

[dependencies]
itertools = { workspace = true }
jiff = { workspace = true }
nom = { workspace = true }
thiserror = "2.0.16"
tracing = { workspace = true }
