[package]
name = "metar_decoder"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pacakge that parses metars into set structs"

[dependencies]
itertools = { workspace = true }
jiff = { workspace = true }
nom = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2.0.16"
tracing = { workspace = true }


[dev-dependencies]
tracing-test = { workspace = true }
