[package]
name = "runway_selector_plugin_host"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Subprocess lifecycle and HTTP/JSON client wiring for area plugins"

[dependencies]
runway_plugin_api = { path = "../runway_plugin_api" }
runway_selector_area_config = { path = "../runway_selector_area_config" }

reqwest = { workspace = true }
rustls = { workspace = true }
semver = "1.0.27"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process", "time", "net", "io-util"] }
tracing = { workspace = true }
which = "8"

[target.'cfg(unix)'.dependencies]
libc = "0.2.180"

[dev-dependencies]
tempfile = "3.27.0"
tokio = { workspace = true, features = ["test-util"] }
