[package]
name = "vatsca_es_setup"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cargo-license = "0.7.0"
config = { version = "0.15.17", features = ["indexmap", "preserve_order"] }
csv = "1.3.1"
directories = "6.0.0"
encoding = "0.2.33"
indexmap = { version = "2.11.4", features = ["serde"] }
itertools = "0.14.0"
jiff = { version = "0.2.15", features = ["serde", "logging"] }
metar_decoder = { path = "../metar_decoder" }
nom = "8.0.0"
once_cell = "1.21.3"
regex = "1.11.3"
reqwest = { version = "0.12", features = ["json"] }
rfd = "0.15.4"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["indexmap", "preserve_order"] }
serde_with = { version = "3.14.1", features = ["indexmap"] }
thiserror = "2.0.16"
tokio = { version = "1", features = ["full"] }
toml = { version = "0.9.7", features = ["preserve_order"] }
tracing = "0.1.41"
walkdir = "2.5.0"
whoami = "1.6.1"
