[package]
name = "area_example_rust"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Minimal Rust area plugin example for es_runway_selector"

[[bin]]
name = "area_example_rust"
path = "src/main.rs"

[dependencies]
runway_plugin_api = { path = "../../runway_plugin_api" }

axum = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "net"] }
